<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fromLabel"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="true"
            android:text="@string/from_label"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/fromSpinner"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toLabel"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="true"
            android:text="@string/to_label"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/toSpinner"
            android:layout_width="232dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/valueLabel"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/value_label"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/valueEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/value_hint"
            android:inputType="numberDecimal|numberSigned" />

    </LinearLayout>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:backgroundTint="#3F51B5"
        android:gravity="center_vertical"
        android:includeFontPadding="true"
        android:text="@string/btn_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/convertResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif-medium"
            android:text="@string/default_text"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resultUnit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/default_text"
            android:textAlignment="textStart"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>